# ChangeLog for media-libs/capseo
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/capseo/Attic/ChangeLog,v 1.7 2008/05/05 09:38:58 trapni Exp $

*capseo-0.3.0_pre200712251-r2 (05 May 2008)

  05 May 2008; Christian Parpart <trapni@gentoo.org>
  +capseo-0.3.0_pre200712251-r2.ebuild:
  fixes bug 200039. thanks to David Leverton

  02 May 2008; Christian Parpart <trapni@gentoo.org>
  capseo-0.3.0_pre200712251-r1.ebuild:
  restrict yasm dependency to x86/amd64 archs only - closes bug 206641

  13 Feb 2008; Christian Faulhammer <opfer@gentoo.org> metadata.xml:
  add no-herd

*capseo-0.3.0_pre200712251-r1 (16 Jan 2008)

  16 Jan 2008; Christian Parpart <trapni@gentoo.org> +files/no-cpsplay.diff,
  +capseo-0.3.0_pre200712251-r1.ebuild:
  fixed cpsplay build inclusion as stated in bug #205830

*capseo-0.3.0_pre200712251 (25 Dec 2007)

  25 Dec 2007; Christian Parpart <trapni@gentoo.org>
  +capseo-0.3.0_pre200712251.ebuild:
  snapshot bump

  01 Jul 2007; Piotr Jaroszyński <peper@gentoo.org>
  capseo-0.3.0_pre200706031.ebuild:
  (QA) RESTRICT="multilib-pkg-force" -> EMULTILIB_PKG="true"

*capseo-0.3.0_pre200706031 (14 Jun 2007)

  14 Jun 2007; <trapni@gentoo.org> +metadata.xml,
  +capseo-0.3.0_pre200706031.ebuild:
  initial import
